ec2_instance_multi_inbound_security_rules.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Template to Create an EC2 instance in a VPC with inbound security rules
   
Parameters:

  ImageId:
    Type: String
    Description: 'Linux 2 AMI for Ireland eu-west1 Region'
    Default: 'ami-0fa49cc9dc8d62c84'
  VpcId:
    Type: String
    Description: VPC id
    Default: vpc-08abefd26722e626d
  SubnetId:
    Type: String
    Description: Subnet in which to launch an EC2
    Default: subnet-0cff86de3f0c3abec
  AvailabilityZone:
    Type: String
    Description: Availability Zone into which instance will launch
    Default: us-east-2a
  InstanceType:
    Type: String
    Description: Choosing  t2 micro because it is free
    Default: t2.micro
  KeyName:
    Description: SSH Keypair to login to the instance
    Type: AWS::EC2::KeyPair::KeyName
    Default: <give the keypair name from your list of keys>

Resources:
  DemoInstance:
    Type: 'AWS::EC2::Instance'
    Properties: 
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      AvailabilityZone: !Ref AvailabilityZone
      KeyName: !Ref KeyName
      SecurityGroupIds: 
        - !Ref DemoSecurityGroup
      SubnetId: !Ref SubnetId
          
  DemoSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: open HTTP-80 and SSH-22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: -1
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: SSH-HTTP-SG
Outputs:
  DemoInstanceId:
    Description: Instance Id 
    Value: !Ref DemoInstance
